# zkguard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
contracts/: remappings.txt
contracts/src/: ZKGuard.sol
core/: Cargo.toml
core/src/: lib.rs
gnark/: .gitignore  README.md  go.mod
gnark/src/: bench_test.go  circuit.go  examples.go  main.go  main_test.go  utils.go
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: policy_engine.rs
noir/: .gitignore  Nargo.toml  Prover.toml  README.md  requirements.txt
noir/src/: README.md  generate_prover_toml.py  main.nr  policy.nr
risc0/: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  rust‑toolchain.toml
risc0/contracts/src/: ZKGuard.sol
risc0/core/: Cargo.toml
risc0/core/src/: lib.rs
risc0/examples/: README.md  allowlists.json  dao_prover.rs  groups.json  onchain_verifier.rs  policy.json  prover.rs
risc0/methods/: Cargo.toml  build.rs
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: lib.rs  policy_engine.rs
risc0/src/: main.rs
src/: main.rs
