[package]
name    = "zkguard_core"
version = "0.1.0"
edition = "2021"
publish = false           # keep this internal for now

[lib]
crate-type = ["rlib"]     # ordinary Rust library

[dependencies]
serde        = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
risc0-zkvm = { version = "2.3", default-features = false, features = ["std", "unstable"] }
sha3 = { version = "0.10.6", default-features = false }
bincode = { version = "1.3", default-features = false }
rs_merkle = { version = "1.3.0", default-features = false }
sha2 = { version = "0.10", default-features = false }